--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -19,11 +19,11 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-	compileSdkVersion 27
+	compileSdkVersion 28
 
 	defaultConfig {
 		minSdkVersion 17
-		targetSdkVersion 27
+		targetSdkVersion 28
 		versionCode 1
 		versionName "1.0"
 
@@ -32,9 +32,9 @@ android {
 }
 
 dependencies {
-	api 'com.android.support:appcompat-v7:27.1.1'
-	api 'com.android.support:design:27.1.1'
-	api 'com.android.support.constraint:constraint-layout:1.1.0'
+	api 'com.android.support:appcompat-v7:28.0.0-alpha3'
+	api 'com.android.support:design:28.0.0-alpha3'
+	api 'com.android.support.constraint:constraint-layout:1.1.2'
 	api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 	api 'androidx.core:core-ktx:0.3'
 }
