--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -32,10 +32,10 @@ android {
 }
 
 dependencies {
-	api 'com.android.support:appcompat-v7:28.0.0-alpha3'
-	api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-	api 'com.android.support:recyclerview-v7:28.0.0-alpha3'
-	api 'androidx.core:core-ktx:0.3'
+	implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+	implementation 'com.android.support:recyclerview-v7:28.0.0-alpha3'
+	implementation 'androidx.core:core-ktx:0.3'
 }
 repositories {
 	mavenCentral()
