--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 }
 
 dependencies {
-	api 'com.android.support:appcompat-v7:28.0.0-alpha3'
-	api 'com.android.support.constraint:constraint-layout:1.1.2'
-	api project(':tools')
+	implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
+	implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+	implementation project(':tools')
 }
