--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ android {
 	compileSdkVersion 28
 	defaultConfig {
 		applicationId "vip.mystery0.simple_tools"
-		minSdkVersion 17
+		minSdkVersion 18
 		targetSdkVersion 28
 		versionCode 1
 		versionName "1.0"
-		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 	}
 	buildTypes {
 		release {
@@ -19,7 +19,8 @@ android {
 }
 
 dependencies {
-	implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
-	implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+	implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha1'
+	implementation("androidx.recyclerview:recyclerview:1.0.0-beta01")
 	implementation project(':tools')
 }
