--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -22,7 +22,7 @@ android {
 	compileSdkVersion 28
 
 	defaultConfig {
-		minSdkVersion 17
+		minSdkVersion 18
 		targetSdkVersion 28
 		versionCode 1
 		versionName "1.0"
@@ -32,10 +32,10 @@ android {
 }
 
 dependencies {
-	implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
+	implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-	implementation 'com.android.support:recyclerview-v7:28.0.0-alpha3'
-	implementation 'androidx.core:core-ktx:0.3'
+	implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
+	implementation 'androidx.core:core-ktx:1.0.0-beta01'
 }
 repositories {
 	mavenCentral()
