--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,6 @@ android {
 dependencies {
 	implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
 	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha1'
-	implementation("androidx.recyclerview:recyclerview:1.0.0-beta01")
+	implementation 'androidx.recyclerview:recyclerview:1.0.0-rc01'
 	implementation project(':tools')
 }
