--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -21,6 +21,10 @@ apply plugin: 'kotlin-android'
 android {
 	compileSdkVersion 28
 
+	dataBinding {
+		enabled = true
+	}
+
 	defaultConfig {
 		minSdkVersion 18
 		targetSdkVersion 28
@@ -34,8 +38,7 @@ android {
 dependencies {
 	implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-	implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
-	implementation 'androidx.core:core-ktx:1.0.0-beta01'
+	implementation 'androidx.recyclerview:recyclerview:1.0.0-rc01'
 }
 repositories {
 	mavenCentral()
