--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,8 @@ android {
 }
 
 dependencies {
-	implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
-	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha1'
-	implementation 'androidx.recyclerview:recyclerview:1.0.0-rc01'
+	implementation 'androidx.appcompat:appcompat:1.0.0-rc02'
+	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+	implementation 'androidx.recyclerview:recyclerview:1.0.0-rc02'
 	implementation project(':tools')
 }
