--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -36,9 +36,10 @@ android {
 }
 
 dependencies {
-	implementation 'androidx.appcompat:appcompat:1.0.0-rc02'
+	implementation 'androidx.appcompat:appcompat:1.0.0'
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-	implementation 'androidx.recyclerview:recyclerview:1.0.0-rc02'
+	implementation 'androidx.recyclerview:recyclerview:1.0.0'
+	implementation 'androidx.preference:preference:1.0.0'
 }
 repositories {
 	mavenCentral()
