--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 	compileOnly 'androidx.preference:preference:1.0.0'
 	compileOnly 'com.squareup.okhttp3:okhttp:3.12.1'
+	compileOnly 'io.reactivex.rxjava2:rxandroid:2.1.1'
+	compileOnly 'io.reactivex.rxjava2:rxjava:2.2.7'
 }
 repositories {
 	mavenCentral()
