--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android {
 }
 
 dependencies {
-	implementation 'androidx.appcompat:appcompat:1.0.2'
-	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
-	implementation 'androidx.recyclerview:recyclerview:1.0.0'
+	implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
+	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha4'
+	implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
 	implementation project(':tools')
 }
