--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -36,12 +36,12 @@ android {
 }
 
 dependencies {
-	implementation 'androidx.appcompat:appcompat:1.0.2'
+	implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-	compileOnly 'androidx.preference:preference:1.0.0'
-	compileOnly 'com.squareup.okhttp3:okhttp:3.12.1'
+	compileOnly 'androidx.preference:preference:1.1.0-alpha04'
+	compileOnly 'com.squareup.okhttp3:okhttp:3.14.1'
 	compileOnly 'io.reactivex.rxjava2:rxandroid:2.1.1'
-	compileOnly 'io.reactivex.rxjava2:rxjava:2.2.7'
+	compileOnly 'io.reactivex.rxjava2:rxjava:2.2.8'
 }
 repositories {
 	mavenCentral()
