--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android {
 }
 
 dependencies {
-	implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
-	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha5'
-	implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
+	implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
+	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
+	implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha05'
 	implementation project(':tools')
 }
