--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 	compileOnly 'com.squareup.okhttp3:okhttp:3.14.1'
 	compileOnly 'io.reactivex.rxjava2:rxandroid:2.1.1'
 	compileOnly 'io.reactivex.rxjava2:rxjava:2.2.8'
+	compileOnly 'com.google.code.gson:gson:2.8.5'
 }
 repositories {
 	mavenCentral()
