--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 	compileOnly 'io.reactivex.rxjava2:rxandroid:2.1.1'
 	compileOnly 'io.reactivex.rxjava2:rxjava:2.2.8'
 	compileOnly 'com.google.code.gson:gson:2.8.5'
+	implementation 'org.apache.commons:commons-compress:1.18'
 }
 repositories {
 	mavenCentral()
