--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -36,12 +36,12 @@ android {
 }
 
 dependencies {
-	implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
+	implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-	compileOnly 'androidx.preference:preference:1.1.0-alpha05'
-	compileOnly 'com.squareup.okhttp3:okhttp:3.14.2'
+	compileOnly 'androidx.preference:preference:1.1.0-beta01'
+	compileOnly 'com.squareup.okhttp3:okhttp:4.0.0'
 	compileOnly 'io.reactivex.rxjava2:rxandroid:2.1.1'
-	compileOnly 'io.reactivex.rxjava2:rxjava:2.2.8'
+	compileOnly 'io.reactivex.rxjava2:rxjava:2.2.10'
 	implementation 'com.google.code.gson:gson:2.8.5'
 	implementation 'org.apache.commons:commons-compress:1.18'
 }
