--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ android:            # 配置信息
 before_install:
 - chmod +x gradlew  # 改变gradlew的访问权限
 
+install:
+- echo y | sdkmanager --licenses
+
 #script:              # 执行:下面的命令
 #- ./gradlew assembleRelease
 #
