--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -36,10 +36,10 @@ android {
 }
 
 dependencies {
-	implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
+	implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-	compileOnly 'androidx.preference:preference:1.1.0-beta01'
-	compileOnly 'com.squareup.okhttp3:okhttp:4.0.0'
+	compileOnly 'androidx.preference:preference:1.1.0-rc01'
+	compileOnly 'com.squareup.okhttp3:okhttp:4.0.1'
 	compileOnly 'io.reactivex.rxjava2:rxandroid:2.1.1'
 	compileOnly 'io.reactivex.rxjava2:rxjava:2.2.10'
 	implementation 'com.google.code.gson:gson:2.8.5'
