--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -33,6 +33,11 @@ android {
 
 		vectorDrawables.useSupportLibrary = true
 	}
+
+	compileOptions {
+		sourceCompatibility 1.8
+		targetCompatibility 1.8
+	}
 }
 
 dependencies {
