--- a/gradle.properties
+++ b/gradle.properties
@@ -17,10 +17,10 @@ org.gradle.jvmargs=-Xmx1536m
 # compile '$POM_GROUP_ID:$POM_ARTIFACT_ID:$POM_VERSION'
 POM_GROUP_ID=vip.mystery0.tools
 POM_ARTIFACT_ID=tools
-POM_VERSION=1.9.7
+POM_VERSION=1.9.8
 
 POM_REPO_NAME=tools
 POM_USER_ORG=mystery00
 POM_UPLOAD_NAME=Tools
-POM_DESC=Android³£ÓÃ¹¤¾ßÀà
+POM_DESC=Androidå¸¸ç”¨å·¥å…·ç±»
 POM_WEBSITE=https://github.com/Mystery0Tools/Tools
