--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,8 @@ android {
 }
 
 dependencies {
-	implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
+	implementation 'androidx.appcompat:appcompat:1.1.0'
 	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
-	implementation 'androidx.recyclerview:recyclerview:1.1.0-beta03'
+	implementation 'androidx.recyclerview:recyclerview:1.1.0-beta04'
 	implementation project(':tools')
 }
