--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,12 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 
 android {
 	compileSdkVersion 29
 	defaultConfig {
 		applicationId "vip.mystery0.simple_tools"
-		minSdkVersion 18
+		minSdkVersion 21
 		targetSdkVersion 29
 		versionCode 1
 		versionName "1.0"
@@ -26,4 +28,11 @@ dependencies {
 	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
 	implementation 'androidx.recyclerview:recyclerview:1.1.0-beta04'
 	implementation project(':tools')
+	implementation "androidx.core:core-ktx:1.1.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines"
+	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines"
+}
+repositories {
+    mavenCentral()
 }
