--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -45,8 +45,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     compileOnly 'androidx.preference:preference:1.1.0'
-    compileOnly 'com.squareup.okhttp3:okhttp:4.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha05'
+    compileOnly 'com.squareup.okhttp3:okhttp:4.2.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-beta01'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.apache.commons:commons-compress:1.19'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines"
