--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation 'org.apache.commons:commons-compress:1.19'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines"
+    implementation "org.apache.tika:tika-core:1.23"
 }
 repositories {
     mavenCentral()
