--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -36,8 +36,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility 1.8
-        targetCompatibility 1.8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -51,7 +51,6 @@ dependencies {
     implementation 'org.apache.commons:commons-compress:1.19'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines"
-    implementation "org.apache.tika:tika-core:1.23"
 }
 repositories {
     mavenCentral()
