--- a/gradle.properties
+++ b/gradle.properties
@@ -17,10 +17,10 @@ org.gradle.jvmargs     = -Xmx1536m
 # compile '$POM_GROUP_ID:$POM_ARTIFACT_ID:$POM_VERSION'
 POM_GROUP_ID           = vip.mystery0.tools
 POM_ARTIFACT_ID        = tools
-POM_VERSION            = 2.2.1
+POM_VERSION            = 2.2.2
 
 POM_REPO_NAME          = tools
 POM_USER_ORG           = mystery00
 POM_UPLOAD_NAME        = Tools
-POM_DESC               = Android常用工具类
+POM_DESC               = Android\u5e38\u7528\u5de5\u5177\u7c7b
 POM_WEBSITE            = https://github.com/Mystery0Tools/Tools
