--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -49,14 +49,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     compileOnly 'androidx.preference:preference:1.1.0'
-    compileOnly 'com.squareup.okhttp3:okhttp:4.3.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc03'
+    compileOnly 'com.squareup.okhttp3:okhttp:4.4.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-alpha01'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'org.apache.commons:commons-compress:1.19'
+    implementation 'org.apache.commons:commons-compress:1.20'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines"
 }
 repositories {
+    maven { url "http://nexus3.mystery0.vip/repository/maven-public/" }
     mavenCentral()
 }
 
