--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha02'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta5'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha03'
     implementation project(':tools')
     implementation "androidx.core:core-ktx:1.2.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -34,5 +34,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines"
 }
 repositories {
+    //如果依赖拉取速度过慢请注释此行
+    maven { url "http://nexus3.mystery0.vip/repository/maven-public/" }
     mavenCentral()
 }
