--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -22,8 +22,8 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 29
 
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding = true
     }
 
     defaultConfig {
