--- a/push.gradle
+++ b/push.gradle
@@ -13,9 +13,37 @@ if (project.rootProject.file('local.properties') != null && project.rootProject.
 def bintrayUser = isHasFile ? properties.getProperty("bintray.user") : System.getenv("BINTRAY_USER")
 def bintrayKey = isHasFile ? properties.getProperty("bintray.apikey") : System.getenv("BINTRAY_KEY")
 
+publishing {
+    publications {
+        Production(MavenPublication) {
+            artifact("$buildDir/outputs/aar/tools-release.aar")
+            groupId POM_GROUP_ID
+            artifactId POM_ARTIFACT_ID
+            version this.version
+
+            pom.withXml {
+                def dependenciesNode = asNode().appendNode('dependencies')
+
+                // Iterate over the implementation dependencies (we don't want the test ones), adding a <dependency> node for each
+                configurations.implementation.allDependencies.each {
+                    // Ensure dependencies such as fileTree are not included in the pom.
+                    if (it.name != 'unspecified') {
+                        def dependencyNode = dependenciesNode.appendNode('dependency')
+                        dependencyNode.appendNode('groupId', it.group)
+                        dependencyNode.appendNode('artifactId', it.name)
+                        dependencyNode.appendNode('version', it.version)
+                    }
+                }
+            }
+        }
+    }
+}
+
 bintray {
     user = bintrayUser
     key = bintrayKey
+    publications = ['Production']
+    configurations = ['archives']
     override = true
     pkg {
         repo = POM_REPO_NAME
@@ -23,6 +51,9 @@ bintray {
         description = POM_DESC
         publish = true
         publicDownloadNumbers = true
+        licenses = ['Apache-2.0']
+        vcsUrl = POM_WEBSITE + '.git'
+        dryRun = true
         userOrg = POM_USER_ORG
         websiteUrl = POM_WEBSITE
         version {
@@ -41,7 +72,7 @@ task fuck(group: 'publishing') {
     }
     doLast {
         exec {
-            commandLine "../${getGradlewName()}", 'clean', 'build', 'bintrayUpload', '-PdryRun=false'
+            commandLine "../${getGradlewName()}", 'clean', 'build', 'bintrayUpload'
         }
     }
 }
