refactor: 重构打包配置

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sun May 31 17:11:06 CST 2020
-distributionBase =GRADLE_USER_HOME
-distributionPath =wrapper/dists
-zipStoreBase     =GRADLE_USER_HOME
-zipStorePath     = wrapper/dists
-distributionUrl  = https\://services.gradle.org/distributions/gradle-6.1.1-all.zip
+#Sat Mar 27 15:24:18 CST 2021
+distributionBase=GRADLE_USER_HOME
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.8.2-bin.zip
+distributionPath=wrapper/dists
+zipStorePath=wrapper/dists
+zipStoreBase=GRADLE_USER_HOME
