--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.0'
-    ext.kotlin_coroutines = '1.3.8'
+    ext.kotlin_version = '1.4.30'
+    ext.kotlin_coroutines = '1.4.2'
     repositories {
+        maven { url = 'https://nexus3.mystery0.vip/repository/maven-public/' }
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath 'com.android.tools.build:gradle:7.0.0-alpha12'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
     }
 }
 
 allprojects {
     repositories {
+        maven { url = 'https://nexus3.mystery0.vip/repository/maven-public/' }
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
