--- a/gradle.properties
+++ b/gradle.properties
@@ -6,21 +6,21 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-android.enableJetifier = true
-android.useAndroidX    = true
-org.gradle.jvmargs     = -Xmx1536m
+android.enableJetifier=true
+android.useAndroidX=true
+org.gradle.jvmargs=-Xmx1536m
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-
 # compile '$POM_GROUP_ID:$POM_ARTIFACT_ID:$POM_VERSION'
-POM_GROUP_ID           = vip.mystery0.tools
-POM_ARTIFACT_ID        = tools
-POM_VERSION            = 2.3.0
-
-POM_REPO_NAME          = tools
-POM_USER_ORG           = mystery00
-POM_UPLOAD_NAME        = Tools
-POM_DESC               = Android\u5e38\u7528\u5de5\u5177\u7c7b
-POM_WEBSITE            = https://github.com/Mystery0Tools/Tools
+POM_GROUP_ID=vip.mystery0.tools
+POM_ARTIFACT_ID=tools
+POM_VERSION=2.3.1-SNAPSHOT
+POM_REPO_NAME=tools
+POM_USER_ORG=mystery00
+POM_UPLOAD_NAME=Tools
+POM_DESC=Android\u5e38\u7528\u5de5\u5177\u7c7b
+POM_WEBSITE=https://github.com/Mystery0Tools/Tools
+SNAPSHOT_REPOSITORY_URL=https://nexus3.mystery0.vip/repository/maven-snapshots/
+RELEASE_REPOSITORY_URL=https://nexus3.mystery0.vip/repository/maven-releases/
